# pixeltales

./: CMakeLists.txt  LICENSE  README.md  input.config  main.cpp
graphics/: Graphics.h  ShaderProgram.h  stb_image.h
graphics/backends/: OpenGL_common.h  OpenGL_modern.cpp
graphics/backends/OpenGL/: OpenGL_common.h
graphics/backends/OpenGL/modern/: ModernGLShaderProgram.cpp  OpenGL_modern.cpp
graphics/backends/OpenGL/modern/shaders/: backgroundFragment.glsl  backgroundVertex.glsl
graphics/glad/include/glad/: glad.h
graphics/glad/src/: glad.c
input/: Input.h
input/backends/: GLFW.cpp
